--- a/index.html
+++ b/index.html
@@ -18,15 +18,20 @@
   </head>
   <body>
     <h1>Boards</h1>
-            
-      <div class="gallery">
-        {% for image in images %}
-            <div class="gallery__item">
-            <img src="{{src}}" alt="{{alt}}">
-            </div>
-        {% endfor %}
-        </div>
-    <
+    
+            <img src="1.jpg"  alt="Board 1"/>
+            <img src="2.jpg" alt="Board 2"/>
+            <img src="3.jpg" alt="Board 3"/>
+            <img src="4.jpg" alt="Board 4"/>
+            <img src="5.jpg" alt="Board 5"/>
+            <img src="6.jpg" alt="Board 6"/>
+            <img src="7.jpg" alt="Board 7"/>
+            <img src="8.jpg" alt="Board 8"/>
+            <img src="9.jpg" alt="Board 9"/>
+            <img src="10.jpg" alt="Board 10"/>
+            <img src="11.jpg" alt="Board 11"/>
+            <img src="12.jpg" alt="Board 12"/>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
