didnt type image sources properly - fixed

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
   <body>
     <h1>Boards</h1>
     
-            <img src="1.jpg"  alt="Board 1" class="productimage"/>
-            <img src="2.jpg" alt="Board 2" class="productimage"/>
-            <img src="3.jpg" alt="Board 3" class="productimage"/>
-            <img src="4.jpg" alt="Board 4" class="productimage"/>
-            <img src="5.jpg" alt="Board 5" class="productimage"/>
-            <img src="6.jpg" alt="Board 6" class="productimage"/>
-            <img src="7.jpg" alt="Board 7" class="productimage"/>
-            <img src="8.jpg" alt="Board 8" class="productimage"/>
-            <img src="9.jpg" alt="Board 9" class="productimage"/>
-            <img src="10.jpg" alt="Board 10" class="productimage"/>
-            <img src="11.jpg" alt="Board 11" class="productimage"/>
-            <img src="12.jpg" alt="Board 12" class="productimage"/>
+            <img src="images/1.jpg"  alt="Board 1" class="productimage"/>
+            <img src="images/2.jpg" alt="Board 2" class="productimage"/>
+            <img src="images/3.jpg" alt="Board 3" class="productimage"/>
+            <img src="images/4.jpg" alt="Board 4" class="productimage"/>
+            <img src="images/5.jpg" alt="Board 5" class="productimage"/>
+            <img src="images/6.jpg" alt="Board 6" class="productimage"/>
+            <img src="images/7.jpg" alt="Board 7" class="productimage"/>
+            <img src="images/8.jpg" alt="Board 8" class="productimage"/>
+            <img src="images/9.jpg" alt="Board 9" class="productimage"/>
+            <img src="images/10.jpg" alt="Board 10" class="productimage"/>
+            <img src="images/11.jpg" alt="Board 11" class="productimage"/>
+            <img src="images/12.jpg" alt="Board 12" class="productimage"/>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
