--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <![endif]-->
   </head>
   <body>
+    <div class="col-md-6">
     <h1>Boards</h1>
     
             <img src="images/1.jpg"  alt="Board 1" class="productimage"/>
@@ -32,7 +33,7 @@
             <img src="images/11.jpg" alt="Board 11" class="productimage"/>
             <img src="images/12.jpg" alt="Board 12" class="productimage"/>
 
-
+        </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
