--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="col-md-6">
+    <div class="col-md-8 col-md-offset-3">
     <h1>Boards</h1>
     
             <img src="images/1.jpg"  alt="Board 1" class="productimage"/>
