--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <li><a href="#">New Arrivals</a></li>
                 <li><a href="#">What Goin On!!!</a></li> 
                 <li><a href="#">Tuning Shop</a></li> 
+                <li><a href="#">Team Profile</a></li> 
+                <li><a href="#">About Us</a></li> 
+                <li><a href="#">Contact Us</a></li> 
+                <li><a href="#">Sale</a></li>
+                <li><input type="search" placeholder="Search" width="200px"/></li>
                 </ul>
             </div>
             </nav>
