--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             </nav>
     </header>
-    <div class="container">
+    <div class="container" id="leftnav-container">
        <nav class="navbar navbar-left">
            <div class="container-fluid">
                 <div class="navbar-header">
