fixed the left navs links

--- a/index.html
+++ b/index.html
@@ -43,15 +43,21 @@
            <div class="container-fluid">
                 <div class="navbar-header">
                 <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">New Arrivals</a></li>
-                <li><a href="#">What Goin On!!!</a></li> 
-                <li><a href="#">Tuning Shop</a></li> 
-                <li><a href="#">Team Profile</a></li> 
-                <li><a href="#">About Us</a></li> 
-                <li><a href="#">Contact Us</a></li> 
-                <li><a href="#">Sale</a></li>
-                <li><input type="search" placeholder="Search" width="200px"/></li>
+                <li><a href="#">By Manufacture</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Bags</a></li> 
+                <li><a href="#">Footwear</a></li> 
+                <li><a href="#">Hats and Beanies</a></li> 
+                <li><a href="#">Longboards</a></li> 
+                <li><a href="#">Men's Clothing</a></li> 
+                <li><a href="#">Outerwear</a></li> 
+                <li><a href="#">Skateboard</a></li>
+                <li><a href="#">Snowboard</a></li>
+                <li><a href="#">SUP</a></li>
+                <li><a href="#">Swim Wear</a></li>
+                <li><a href="#">Wakeboard</a></li>
+                <li><a href="#">Wetsuits</a></li>
+                <li><a href="#">Women's Clothing</a></li>
                 </ul>
             </div>
             </nav>
