--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-       <nav class="navbar navbar-default">
+       <nav class="navbar navbar-center">
            <div class="container-fluid">
                 <div class="navbar-header">
                 <a class="navbar-brand" href="#">Frost Souths</a>
