--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
            <div class="container-fluid">
                 <div class="navbar-header">
                 <ul class="nav navbar-nav">
-                <li><a href="#">By Manufacture</a></li>
+                <li><a href="#">By Manufacture</a>
+                <p> CA $399.99</p></li>
                 <li><a href="#">Accessories</a></li>
                 <li><a href="#">Bags</a></li> 
                 <li><a href="#">Footwear</a></li> 
