hope this lines things up for me

--- a/index.html
+++ b/index.html
@@ -67,15 +67,22 @@
     
     <div class="col-md-8 col-md-offset-3">
     <h1>Boards</h1>
-            
+            <div class="container">
             <img src="images/1.jpg"  alt="Board 1" class="productimage"/>
             <p class="product price"> CA $399.99</p>
+            </div>
+            <div class="container">
             <img src="images/2.jpg" alt="Board 2" class="productimage"/>
             <p class="product price"> CA $399.99</p>
+            </div>
+            <div class="container">
             <img src="images/3.jpg" alt="Board 3" class="productimage"/>
             <p class="product price"> CA $399.99</p>
+            </div>
+            <div class="container">
             <img src="images/4.jpg" alt="Board 4" class="productimage"/>
             <p class="product price"> CA $399.99</p>
+            </div>
             <img src="images/5.jpg" alt="Board 5" class="productimage"/>
             <p class="product price"> CA $399.99</p>
             <img src="images/6.jpg" alt="Board 6" class="productimage"/>
