forcing some movement

--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
     <div class="col-md-10 col-md-offset-2" id="productsection">
         <div class="row">
     <h1>Boards</h1>
-            
-            <img src="images/1.jpg"  alt="Board 1" class="productimage"/>
-            <p class="product price"> CA $399.99</p>
+           
+            <img src="images/1.jpg"  alt="Board 1" class="productimage">
+            <p class="product price"> CA $399.99</p></img>
             <img src="images/2.jpg" alt="Board 2" class="productimage"/>
-            <p class="product price"> CA $399.99</p>
+            <p class="product price"> CA $399.99</p></img>
             <img src="images/3.jpg" alt="Board 3" class="productimage"/>
-            <p class="product price"> CA $399.99</p>
+            <p class="product price"> CA $399.99</p></img>
             <img src="images/4.jpg" alt="Board 4" class="productimage"/>
-            <p class="product price"> CA $399.99</p>
+            <p class="product price"> CA $399.99</p></img>
             <img src="images/5.jpg" alt="Board 5" class="productimage"/>
-            <p class="product price"> CA $399.99</p>
+            <p class="product price"> CA $399.99</p></img>
             <img src="images/6.jpg" alt="Board 6" class="productimage"/>
-            <p class="product price"> CA $399.99</p>
+            <p class="product price"> CA $399.99</p></img>
             <img src="images/7.jpg" alt="Board 7" class="productimage"/>
-            <p class="product price"> CA $399.99</p>
+            <p class="product price"> CA $399.99</p></img>
             <img src="images/8.jpg" alt="Board 8" class="productimage"/>
-            <p class="product price"> CA $399.99</p>
+            <p class="product price"> CA $399.99</p></img>
             <img src="images/9.jpg" alt="Board 9" class="productimage"/>
-            <p class="product price"> CA $399.99</p>
+            <p class="product price"> CA $399.99</p></img>
             <img src="images/10.jpg" alt="Board 10" class="productimage"/>
             <p class="product price"> CA $399.99</p>
             <img src="images/11.jpg" alt="Board 11" class="productimage"/>
