i hate when i forget to push

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/app.css"/>
   </head>
   <body>
+   <div id="container" class="container-fluid text-center">
     <header>
        <nav class="navbar navbar-center">
            <div class="container-fluid">
@@ -118,6 +119,7 @@
             <img src="images/12.jpg" alt="Board 12" class="productimage"/>
             
           </div>
+        </div>
         </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
