--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <nav class="navbar navbar-center">
            <div class="container-fluid">
                 <div class="navbar-header">
-                <a class="navbar-brand" href="#">Frost Souths</a>
+                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Store Logo" id="logo"/></a>
                 </div>
                 <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
