--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="navbar-header">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Store Logo" id="logo"/></a>
                 </div>
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">New Arrivals</a></li>
                 <li><a href="#">What Goin On!!!</a></li> 
