--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
    <div id="container" class="container-fluid text-center">
     <header>
-       <nav class="navbar navbar-center">
+       <nav class="navbar navbar-right">
            <div class="container-fluid">
                 <div class="navbar-header">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Store Logo" id="logo"/></a>
