--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container" id="leftnav-container">
        <nav class="navbar navbar-left navbar-fixed-left"">
            <div class="container-fluid">
-                <div class="navbar-header">
+                <div class="navbar-header" id="leftnav">
                 <ul class="nav navbar-nav">
                 <li><a href="#">By Manufacture</a></li>
                 <li><a href="#">Accessories</a></li>
