added page numbers

--- a/index.html
+++ b/index.html
@@ -318,6 +318,21 @@
 
 </section>
 </div>
+<div class="pagenumbers">
+    <p>1</p>
+</div>
+<div class="pagenumbers">
+    <p>2</p>
+</div>
+<div class="pagenumbers">
+    <p>3</p>
+</div>
+
+
+
+<footer>
+    <p> Frosty South </p>
+</footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
