--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
   <!-- more products -->
 
 </section>
+<div class="row">
 </div>
 <div class="pagenumbers">
     <p>1</p>
@@ -327,6 +328,7 @@
 <div class="pagenumbers">
     <p>3</p>
 </div>
+    </div>
 
 
 
