--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
   <!-- more products -->
 
 </section>
-<div class="row">
+<div class="col-md-4">
 </div>
 <div class="pagenumbers">
     <p>1</p>
