--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Store Logo" id="logo"/></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
+                <li id="dropdown"><a href="#">Menu</a></li>
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">New Arrivals</a></li>
                 <li><a href="#">What Goin On!!!</a></li> 
