--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                 <div class="navbar-header">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Store Logo" id="logo"/></a>
                 </div>
-                <ul class="nav navbar-nav navbar-right">
-                <li id="dropdown"><a href="#">Menu</a></li>
+                <ul class="nav navbar-nav navbar-right" id="mobilemenu">
+                    <li id="dropdown"><a href="#">Menu</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right" id="menu">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">New Arrivals</a></li>
                 <li><a href="#">What Goin On!!!</a></li> 
